--- a/CrudBloc4.csproj
+++ b/CrudBloc4.csproj
@@ -58,11 +58,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\ManageDepartment\DepartmentManage.cs">
+    <Compile Include="Views\ManageDepartment\DepartmentForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\ManageDepartment\DepartmentManage.Designer.cs">
-      <DependentUpon>DepartmentManage.cs</DependentUpon>
+    <Compile Include="Views\ManageDepartment\DepartmentForm.Designer.cs">
+      <DependentUpon>DepartmentForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ManageEmployee\EmployeeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ManageEmployee\EmployeeForm.Designer.cs">
+      <DependentUpon>EmployeeForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\ManageSite\SiteForm.cs">
       <SubType>Form</SubType>
@@ -82,8 +88,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Views\ManageDepartment\DepartmentManage.resx">
-      <DependentUpon>DepartmentManage.cs</DependentUpon>
+    <EmbeddedResource Include="Views\ManageDepartment\DepartmentForm.resx">
+      <DependentUpon>DepartmentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\ManageEmployee\EmployeeForm.resx">
+      <DependentUpon>EmployeeForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ManageSite\SiteForm.resx">
       <DependentUpon>SiteForm.cs</DependentUpon>
