--- a/CrudBloc4.csproj
+++ b/CrudBloc4.csproj
@@ -50,6 +50,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="database_projet4DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>database_projet4DataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="database_projet4DataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>database_projet4DataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="FormApplication.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +107,28 @@
     <EmbeddedResource Include="Views\ManageSite\SiteForm.resx">
       <DependentUpon>SiteForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="database_projet4DataSet.xsc">
+      <DependentUpon>database_projet4DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="database_projet4DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>database_projet4DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="database_projet4DataSet.xss">
+      <DependentUpon>database_projet4DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="database_projet4DataSet1.xsc">
+      <DependentUpon>database_projet4DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="database_projet4DataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>database_projet4DataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="database_projet4DataSet1.xss">
+      <DependentUpon>database_projet4DataSet1.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
