fix: update site, feature: admin access

--- a/CrudBloc4.csproj
+++ b/CrudBloc4.csproj
@@ -37,6 +37,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\MySQL\Connector NET 8.0\Assemblies\v4.5.2\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -96,6 +97,12 @@
     <Compile Include="Views\ManageSite\SiteForm.Designer.cs">
       <DependentUpon>SiteForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\PasswordForm\PwdFormAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\PasswordForm\PwdFormAdmin.Designer.cs">
+      <DependentUpon>PwdFormAdmin.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FormApplication.resx">
       <DependentUpon>FormApplication.cs</DependentUpon>
     </EmbeddedResource>
@@ -116,6 +123,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ManageSite\SiteForm.resx">
       <DependentUpon>SiteForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\PasswordForm\PwdFormAdmin.resx">
+      <DependentUpon>PwdFormAdmin.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="database_projet4DataSet.xsc">
       <DependentUpon>database_projet4DataSet.xsd</DependentUpon>
